fininshed first combine and search result via query string completed

--- a/BookShop/Site.Master
+++ b/BookShop/Site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="BookShop.SiteMaster" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Book_Shop.SiteMaster" %>
 
 <!DOCTYPE html>
 
