updated home and site master

--- a/BookShop/Site.Master
+++ b/BookShop/Site.Master
@@ -1,4 +1,8 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="Book_Shop.SiteMaster" %>
+﻿<%@ Master 
+    Language="C#" 
+    AutoEventWireup="true" 
+    CodeBehind="Site.master.cs" 
+    Inherits="Book_Shop.SiteMaster" %>
 
 <!DOCTYPE html>
 
@@ -6,7 +10,7 @@
 <head runat="server">
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title><%: Page.Title %> - My ASP.NET Application</title>
+    <title><%: Page.Title %></title>
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
@@ -21,7 +25,50 @@
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
 
-
+    <style>
+        .navbar-container {
+            min-width:800px;
+            width:100%;
+            align-content:center;
+            box-shadow: 0px 4px 10px -2px hsl(0, 0%, 80%);
+        }
+        .td1 {
+            width:385px;
+        }
+        .td2 {
+            text-align:left;
+            width:300px;
+        }
+        .td3 {
+            width:200px;
+        }
+        #imgMainBrand {
+            padding-top:5px;
+            height:50px;
+            display:inline-block;
+        }
+        #tbxSearch {
+            height:30px;
+            border-radius:20px;
+            width:92%;
+            padding-left: 10px;
+            vertical-align:central;
+            font-family:'Roboto Condensed';
+        }
+        #imgPowerSearch {
+            height:30px;
+            margin-top:1px;
+            display:inline-block;
+        }
+        #imgCart {
+            height:30px;
+            margin-top:1px;
+            display:inline-block;
+        }
+        #btn-right {
+            display:inline-block;
+        }
+    </style>
 </head>
 <body>
     <form runat="server">
@@ -46,7 +93,20 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <div class="navbar navbar-inverse navbar-fixed-top">
+        <table class="navbar-container">
+            <tr>
+                <td class="td1"><asp:ImageButton ID="imgMainBrand" runat="server" ImageUrl="~/resources/brand/ext.png"/></td>
+                <td class="td2"><asp:TextBox ID="tbxSearch" placeholder="Enter title, author or category to search."  runat="server" Text=""></asp:TextBox></td>
+                <td><asp:ImageButton runat="server" ID="imgPowerSearch" ImageUrl="~/resources/symbol/magnifying_glass_blue.png" OnClick="imgPowerSearch_Click"/></td>
+                <td><asp:ImageButton runat="server" ID="imgCart" ImageUrl="~/resources/symbol/shopping-cart-blue.png" OnClick="imgCart_Click"/></td>
+                <td class="td3">
+                    <asp:Button ID="btnSignUp" class="btn-right" runat="server" Text="Sign Up" OnClick="btnSignUp_Click" />
+                    <asp:Button ID="btnLogIn" class="btn-right" runat="server" Text="Log In" OnClick="btnLogIn_Click" />
+                    <asp:Button ID="btnUser" class="btn-right" runat="server" Text="Account" OnClick="btnUser_Click"/>
+                </td>
+            </tr>
+        </table>
+        <%--<div class="navbar navbar-inverse navbar-fixed-top">
             <div class="container">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -64,13 +124,13 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div>--%>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
             <hr />
             <footer>
-                <p>&copy; <%: DateTime.Now.Year %> - My ASP.NET Application</p>
+                <p>&copy; <%: DateTime.Now.Year %> - NUS ISS GDipSA46 Team 6 SA4108 Programming Web Applications using ASP.NET </p>
             </footer>
         </div>
 
