--- a/BookShop/Site.Master
+++ b/BookShop/Site.Master
@@ -27,6 +27,8 @@
 
     <style>
         .navbar-container {
+            margin-top:0px;
+            padding-top:0px;
             min-width:800px;
             width:100%;
             align-content:center;
@@ -72,7 +74,7 @@
 </head>
 <body>
     <form runat="server">
-        <table class="navbar-container">
+        <table class="navbar-container navbar-fixed-top">
             <tr>
                 <td class="td1"><asp:ImageButton ID="imgMainBrand" runat="server" ImageUrl="~/resources/brand/ext.png"/></td>
                 <td class="td2"><asp:TextBox ID="tbxSearch" placeholder="Enter title, author or category to search."  runat="server" Text=""></asp:TextBox></td>
