--- a/BookShop/Site.Master
+++ b/BookShop/Site.Master
@@ -21,9 +21,14 @@
     <script src="Scripts/jquery-3.0.0.min.js"></script>
     <script src="Scripts/moment.min.js"></script>
     <script src="Scripts/bootstrap.min.js"></script>
+    
     <link href="Content/bootstrap-datetimepicker.css" rel="stylesheet" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
+
+    <script src="http://code.jquery.com/jquery-1.9.1.min.js" type="text/javascript"></script>
+   <Link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/css/toastr.css" rel="stylesheet" />
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.0.1/js/toastr.js" type="text/javascript"></script>
 
     <style>
         .navbar-container {
@@ -37,13 +42,16 @@
         }
         .td1 {
             width:385px;
+            padding-left: 20px;
         }
         .td2 {
             text-align:left;
             width:300px;
         }
         .td3 {
-            width:300px;
+            text-align:right;
+            min-width:300px;
+            padding-right: 20px;
         }
         #imgMainBrand {
             padding-top:5px;
